--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
 li {
   list-style: none;
 }
@@ -61,4 +65,6 @@ a {
 
 .project-tile p {
   text-align: center;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
