--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
   margin: 0;
 }
 
-body {
-  font-family: 'Raleway', sans-serif;
-}
-
 li {
   list-style: none;
 }
@@ -18,10 +14,12 @@ a {
 
 #navbar {
   background: #333;
-  position: sticky;
-  top: 0;
   display: flex;
   justify-content: end;
+  height: 50px;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
 #navbar ul {
@@ -30,44 +28,63 @@ a {
 }
 
 #navbar ul li {
-  padding: 20px 40px;
+  padding-right: 20px;
 }
 
 #welcome-section {
-  background: url('https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.edx.org%2Fwp-content%2Fuploads%2F2016%2F07%2FFrontEndDev.jpg&f=1') no-repeat center center/cover;
+  background: #5adbff;
   height: 100vh;
-  text-align: center;
 }
 
 #welcome-section h1 {
-  color: #fff;
-  padding-top: 20rem;
+  position: absolute;
+  top: 50%;
+  left: 40%;
 }
 
 #projects {
   background: #ddd;
-  padding: 200px 200px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, auto);
-  grid-gap: 50px;
+  padding-bottom: 50px;
 }
 
-#projects .project-tile {
-  border: 2px solid #000;
-  border-radius: 5px;
+#projects h2 {
+  text-align: center;
+  /* color: #fff; */
+  padding: 40px 0;
+  text-decoration: underline;
+}
+
+#project-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.project-tile {
+  border: 5px solid #333;
+  border-radius: 10px;
 }
 
 .project-tile img {
-  max-width: 390px;
-  min-height: 300px;
-  /* max-height: 310px; */
-  padding: 10px;
+  max-width: 100%;
+  height: 200px;
 }
 
-.project-tile p {
+.project-title {
   text-align: center;
-  font-weight: bold;
-  letter-spacing: 2px;
-  padding-bottom: 5px;
+}
+
+footer {
+  background: #333;
+  height: 100px;
+  text-align: center;
+}
+
+/* Media Query */
+@media only screen and (max-width: 500px) {
+  #project-wrapper {
+    flex-wrap: wrap;
+  }
+  .project-tile {
+    margin-bottom: 30px;
+  }
 }
